--- a/index.html
+++ b/index.html
@@ -693,7 +693,14 @@ html, body {
   <button id="btn-registrar">Registrar</button>
 </div>
 
+<div id="verificacao-spam" style="display: none; background-color: black; color: white; width: 100vw; height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem;">
+  <h2>📬 Verifique sua caixa de spam</h2>
+  <p>Não encontramos sua verificação ainda.<br>Verifique sua caixa de entrada e spam.<br>O e-mail pode levar alguns segundos para chegar.</p>
 
+  <button id="btn-voltar-login-spam" style="margin-top: 1rem; background-color: #5865f2; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
+    Voltar ao Login
+  </button>
+</div>
 <!-- Registro -->
 <div id="register-container" style="display: none;">
   <h2>Registrar</h2>
@@ -958,9 +965,12 @@ btnLogin.onclick = async () => {
 
     if (!user.emailVerified) {
       await sendEmailVerification(user);
+
+      // ✅ Vai para a tela de SPAM
       loginContainer.style.display = "none";
       registerContainer.style.display = "none";
-      document.getElementById("verificacao-container").style.display = "flex";
+      document.getElementById("verificacao-spam").style.display = "flex";
+
       localStorage.setItem("verificacao_enviada", "true");
       await signOut(auth);
       return;
@@ -973,26 +983,28 @@ btnLogin.onclick = async () => {
 
   } catch (e) {
     if (e.code === "auth/too-many-requests") {
-      // Tentamos forçar login falso para pegar o user e verificar se é não verificado
       try {
+        // ⚠️ Tenta detectar se o e-mail está só não verificado
         const fakeCred = await signInWithEmailAndPassword(auth, email, "senhaErrada123");
         const fakeUser = fakeCred.user;
         await fakeUser.reload();
 
         if (!fakeUser.emailVerified) {
           await sendEmailVerification(fakeUser);
+
           loginContainer.style.display = "none";
           registerContainer.style.display = "none";
-          document.getElementById("verificacao-container").style.display = "flex";
+          document.getElementById("verificacao-spam").style.display = "flex";
+
           localStorage.setItem("verificacao_enviada", "true");
           await signOut(auth);
           return;
         }
       } catch {
-        // Não faz nada aqui, cai para o aviso padrão
+        // Se falhar, mostra o aviso padrão
       }
 
-      aviso.textContent = "Muitas tentativas. Aguarde antes de tentar novamente.";
+      aviso.textContent = "Recarregue a página!";
       aviso.style.display = "block";
       return;
     }
@@ -1013,6 +1025,7 @@ btnLogin.onclick = async () => {
     aviso.style.display = "block";
   }
 };
+
 
 
 function scrollVideos(direction = 'right', rowId = 'video-row') {
@@ -1231,43 +1244,58 @@ document.body.addEventListener("click", () => {
 let authReady = false;
 
 onAuthStateChanged(auth, async (user) => {
-  authReady = true;
+  const verificacaoContainer = document.getElementById("verificacao-container");
+  const loadingScreen = document.getElementById("loading-screen");
 
   if (user) {
-    await user.reload();
+    try {
+      await user.reload(); // 🔄 Garante status atualizado
 
-    if (user.emailVerified) {
-      emVerificacao = false;
-      localStorage.removeItem("verificacao_enviada");
-      localStorage.removeItem("recarregadoAposLogin");
+      if (user.emailVerified) {
+        emVerificacao = false;
+        localStorage.removeItem("verificacao_enviada");
+        localStorage.removeItem("recarregadoAposLogin");
 
-      await carregarAvatar(user.uid);
+        // 👇 OCULTA tudo antes de exibir
+        verificacaoContainer.style.display = "none";
+const spamDiv = document.getElementById("verificacao-spam");
+if (spamDiv) spamDiv.style.display = "none";
+        loginContainer.style.display = "none";
+        registerContainer.style.display = "none";
+        loadingScreen.style.display = "none";
+        siteContent.style.display = "none";
+        iconBar.style.display = "none";
 
-      document.getElementById("verificacao-container").style.display = "none";
-      document.getElementById("loading-screen").style.display = "none";
-      loginContainer.style.display = "none";
-      registerContainer.style.display = "none";
-      siteContent.style.display = "block";
-      iconBar.style.display = "flex";
-    } else {
-      if (!emVerificacao) {
+        // ⏳ Espera avatar antes de mostrar o site
+        await carregarAvatar(user.uid);
+
+        // ✅ Mostra o conteúdo agora que o avatar foi carregado
+        siteContent.style.display = "block";
+        iconBar.style.display = "flex";
+
+        document.body.style.visibility = "visible";
+      } else {
+        // 🚫 Ainda não verificado → mostra tela preta
         emVerificacao = true;
-
-        document.getElementById("verificacao-container").style.display = "flex";
-        document.getElementById("loading-screen").style.display = "none";
+        verificacaoContainer.style.display = "flex";
+        loadingScreen.style.display = "none";
         loginContainer.style.display = "none";
         registerContainer.style.display = "none";
         siteContent.style.display = "none";
         iconBar.style.display = "none";
       }
+    } catch (error) {
+      console.error("Erro ao processar authStateChanged:", error);
     }
   } else {
+    // 👤 Não logado
     if (!emVerificacao) {
-      document.getElementById("loading-screen").style.display = "none";
+      loadingScreen.style.display = "none";
       loginContainer.style.display = "flex";
       registerContainer.style.display = "none";
       siteContent.style.display = "none";
       iconBar.style.display = "none";
+
       aplicarAvatar(null);
       inputEmail.value = "";
       inputSenha.value = "";
@@ -1275,6 +1303,8 @@ onAuthStateChanged(auth, async (user) => {
     }
   }
 });
+
+
 
 
 
@@ -1427,11 +1457,6 @@ document.getElementById("btn-voltar-login-verificacao").onclick = async () => {
   aviso.style.display = "none";
   aviso.textContent = "";
 
-  // ⏳ Aguarda o Firebase estar pronto
-  while (!authReady) {
-    await new Promise(resolve => setTimeout(resolve, 100));
-  }
-
   const user = auth.currentUser;
 
   if (user) {
@@ -1446,25 +1471,23 @@ document.getElementById("btn-voltar-login-verificacao").onclick = async () => {
       iconBar.style.display = "flex";
       await carregarAvatar(user.uid);
     } else {
+      // ⚠️ SOMENTE AVISO — não muda de tela
       aviso.textContent = "Ainda não verificamos seu e-mail. Aguarde alguns segundos após clicar no link.";
       aviso.style.display = "block";
     }
   } else {
-    // 🔁 Somente volta ao login se REALMENTE não estiver logado
-    aviso.textContent = "Mano? olha a caixa de spam do e-mail";
+    aviso.textContent = "Sessão expirada. Faça login novamente.";
     aviso.style.display = "block";
+
+    setTimeout(() => {
+      document.getElementById("verificacao-container").style.display = "none";
+      loginContainer.style.display = "flex";
+      inputEmail.value = "";
+      inputSenha.value = "";
+      emVerificacao = false;
+    }, 2000);
   }
 };
-
-
-
-
-
-
-
-
-
-
 
 document.getElementById("btn-reenviar-email").onclick = async () => {
   const aviso = document.getElementById("verificacao-aviso");
@@ -1508,6 +1531,15 @@ btnVoltarRegistro.onclick = () => {
   registerContainer.style.display = "flex";
 };
 
+document.getElementById("btn-voltar-login-spam").onclick = () => {
+  document.getElementById("verificacao-spam").style.display = "none";
+  loginContainer.style.display = "flex";
+
+  inputEmail.value = "";
+  inputSenha.value = "";
+  document.getElementById("login-aviso").style.display = "none";
+  emVerificacao = false;
+};
 
 
   </script>
